# FLASH_CARDS

./: CMakeLists.txt  main.cpp
assets/body/: card.css  card.html  index.css  index.html
src/: card.cpp  card.hpp  database.cpp  database.hpp  webviewwindow.cpp  webviewwindow.hpp
